# rinetd-uv

./: .dockerignore  .gitignore  ANALYSIS.md  BUILD.md  CHANGES.md  CLEANUP_SUMMARY.md  CMakeLists.txt  DOCUMENTATION.md  Dockerfile  Makefile.am  README.md  SECURITY.md  TCP-UDP_MIXED_MODE.md  configure.ac  dockerhub-overview.md  generate-conf.sh  generate-html.sh  generate-manpage.sh  index.html  pytest.ini  release.sh.template  rinetd-uv.8  rinetd-uv.conf  rinetd-uv.yaml  rinetd.8
.github/: dependabot.yml
.github/workflows/: build.yml  codacy.yml  codeql.yml
freebsd-port/: Makefile  distinfo  pkg-descr
freebsd-port/files/: rinetd-uv.in
release/: make-release.py  release.sh.template
src/: Makefile.am  affinity.c  affinity.h  buffer_pool.c  buffer_pool.h  loadbalancer.c  loadbalancer.h  log.c  log.h  match.c  match.h  net.c  net.h  parse.c  parse.h  parse.peg  rinetd.c  rinetd.c.backup  rinetd.h  stats.c  stats.h  types.h  yaml_config.c  yaml_config.h
test/: README.md  test_dns_forwarding.py  test_parallel_connections.py
test_suite/: README.md  conftest.py  pytest.ini  requirements.txt  servers.py  test_big.py  test_config.py  test_connect_timeout.py  test_dns_multiip.py  test_error_handling.py  test_lb.py  test_leaks.py  test_matrix.py  test_reload.py  test_stats.py  test_stress.py  test_stress_sighup.py  test_transfer.py  test_yaml.py  utils.py
tools/: conf2yaml.py
